# pleroma_purge_old_chats

./: .gitignore  README.md  config.py  database.ini  purge_old_chats.py  pyproject.toml  requirements.txt  setup.cfg
pleroma_purge_old_chats/: config.py  main.py  purge_old_chats.py
pleroma_purge_old_chats/data/: database.ini
tests/: config.ini  test_purge.py
tools/: run_by_cron.sh
