[metadata]
name = pleroma_purge_old_chats
version = file: VERSION
license_files = "LICENSE"

[options]
python_requires = >=3.7
packages = find:
#install_requires =
#    psycopg2 >= 2.9.0
install_requires = file: requirements.txt

[options.package_data]
* = data\*.ini

[options.entry_points]
console_scripts = pleroma_purge_old_chats = pleroma_purge_old_chats.purge_old_chats:main

[options.packages.find]
exclude =
    tests
    tests.*