[metadata]
name = pleroma_purge_old_chats
version = file: VERSION
license_files = "LICENSE"

[options]
python_requires = >=3.7
packages = find:
install_requires = file: requirements.txt
include_package_data = True

[options.package_data]
* = data\*.ini

[options.entry_points]
console_scripts = pleroma_purge_old_chats = pleroma_purge_old_chats.main:cli

[options.packages.find]
exclude =
    tests
    tests.*